Fixed layout issue with IE6, IE7 with buttons piling up after end of form. Used position: relative to solve another IE7 issue (see http://snook.ca/archives/html_and_css/position_relative_overflow_ie/) removed maskSafeHide and maskSafeShow functions as they are no longer used

--- a/resources/uploadWizard.css
+++ b/resources/uploadWizard.css
@@ -348,8 +348,7 @@ a[disabled=true]:hover {
 }
 
 .mwe-upwiz-stepdiv {
-	height: 0px;
-	overflow: hidden;
+	position: relative; 
 }
 
 
